Inclusão de texto e fotos

--- a/index.html
+++ b/index.html
@@ -4,28 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EuroTrilhas</title>
 </head>
 <body>
     <header>
-        <span>EuroTour</span>
+        <img src="assets/EuroTrilhhas.png" alt="Imagem do logotipo">
         <nav>
             <ul>
-                <li>Passagens</li>
+                <li>Passagens Aéreas</li>
                 <li>Hospedagens</li>
+                <li>Guia de Destinos</li>
                 <li>Pontos Turísticos</li>
+                <li>Contato</li>
             </ul>
         </nav>
     </header>
     <main>
-        <H1>Bem-vindo à Eurotour</H1>
+        <H1>Bem-vindo à EuroTrilhas</H1>
         <section>
             <h2>Sobre nós</h2>
-            <p>Eurotour é um site que ajuda você a planejar a sua viagem para a Europa, desde a compra das passagens até a visita aos pontos turísticos mais importantes de cada região.</p>
+            <p>EuroTrilhas é o site onde você encontra destinos especiais para visitar, incluindo locais pouco conhecidos, mas que possuem grande beleza e muitas atrações para você e sua família.</p>
+        </section>
+        <section>
+            <h2>Destaques da semana</h2>
+            <h3>Lusia</h3>
+            <img src="assets/Lusia Itália.jpeg" alt="Foto de Lusia - Itália">
+            <p>Lusia é uma comuna italiana da região do Vêneto, província de Rovigo, com cerca de 3.585 habitantes. Estende-se por uma área de 17 km², tendo uma densidade populacional de 211 hab/km². Faz fronteira com Barbona (PD), Lendinara, Rovigo, Sant'Urbano (PD), Villanova del Ghebbo.</p>
+        </section>
+        <section>
+            <h3>Toulouse</h3>
+            <img src="assets/Toulouse França.jpeg" alt="Foto de Toulouse - França">
+            <p>Toulouse (em occitano: Tolosa, grafia também usada em português[2]) é a capital do departamento francês da Alta Garona e da região de Occitânia. A cidade fica nas margens do rio Garona, a 150 quilômetros do mar Mediterrâneo, a 230 km do Atlântico e a 680 km de Paris. É a quarta maior cidade da França, com 479 553 habitantes em 2017. A área metropolitana de Toulouse, com 1 360 829 habitantes em 2017, é a quarta maior região metropolitana do país, depois de Paris, Lyon e Marselha, e à frente de Lille e Bordéus.</p>
+        </section>
+        <section>
+            <h3>Ávila</h3>
+            <img src="assets/Ávila Espanha.jpeg" alt="Foto de Ávila - Espanha">
+            <p>Ávila é um município espanhol, localizado na província de Ávila, na comunidade autônoma de Castela e Leão.[2] Está situada próxima do rio Adaja e é a capital de província espanhola mais alta, a 1131m acima do nível do mar. A cidade apresenta um clima mediterrâneo continental com nuances de clima de montanha.[3]</p>
         </section>
     </main>
     <footer>
-        <span>EuroTour(c)</span>
+        <span>EuroTrilhas(c)</span>
         <ul>
             <li>Facebook</li>
             <li>Instagram</li>
