--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
         </section>
         <section>
             <h2>Destaques da semana</h2>
-            <h3>Lusia</h3>
+            <h3>Lusia - Itália</h3>
             <img src="assets/Lusia Itália.jpeg" alt="Foto de Lusia - Itália">
             <p>Lusia é uma comuna italiana da região do Vêneto, província de Rovigo, com cerca de 3.585 habitantes. Estende-se por uma área de 17 km², tendo uma densidade populacional de 211 hab/km². Faz fronteira com Barbona (PD), Lendinara, Rovigo, Sant'Urbano (PD), Villanova del Ghebbo.</p>
         </section>
         <section>
-            <h3>Toulouse</h3>
-            <img src="assets/Toulouse França.jpeg" alt="Foto de Toulouse - França">
+            <h3>Toulouse - França</h3>
+            <img src="assets/Toulouse_France_Cidades-em-Fotos.jpg" alt="Foto de Toulouse">
             <p>Toulouse (em occitano: Tolosa, grafia também usada em português[2]) é a capital do departamento francês da Alta Garona e da região de Occitânia. A cidade fica nas margens do rio Garona, a 150 quilômetros do mar Mediterrâneo, a 230 km do Atlântico e a 680 km de Paris. É a quarta maior cidade da França, com 479 553 habitantes em 2017. A área metropolitana de Toulouse, com 1 360 829 habitantes em 2017, é a quarta maior região metropolitana do país, depois de Paris, Lyon e Marselha, e à frente de Lille e Bordéus.</p>
         </section>
         <section>
-            <h3>Ávila</h3>
+            <h3>Ávila - Espanha</h3>
             <img src="assets/Ávila Espanha.jpeg" alt="Foto de Ávila - Espanha">
             <p>Ávila é um município espanhol, localizado na província de Ávila, na comunidade autônoma de Castela e Leão.[2] Está situada próxima do rio Adaja e é a capital de província espanhola mais alta, a 1131m acima do nível do mar. A cidade apresenta um clima mediterrâneo continental com nuances de clima de montanha.[3]</p>
         </section>
     </main>
     <footer>
-        <span>EuroTrilhas(c)</span>
+        <img src="assets/Cópia de EuroTrilhhas.png" alt="Imagem de logotipo de rodapé">
         <ul>
             <li>Facebook</li>
             <li>Instagram</li>
