Retificação de títulos e edição de imagens

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <ul>
             <li>Facebook</li>
             <li>Instagram</li>
+            <li>Twitter</li>
             <li>Linkedin</li>
     </ul>
     </footer>
